<resources>
    <string name="app_name">Footy</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="API_KEY">1dc5fcf0b9973b3b6c0cd5f953a6a1ab37bcbb4aab40090bf257a567df785bf5</string>
    <string name="home_team_logo">Home Team Logo</string>
    <string name="goals">Goals</string>
    <string name="Lineup">Lineup</string>
    <string name="no_matches_this_day">No Matches This Day :(</string>
    <string name="my_profile">My Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="premiere_league">Premiere League</string>
    <string name="la_liga">La Liga</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="serie_a">Serie A</string>
    <string name="legue_1">Legue 1</string>
    <string name="ligue_1">Ligue 1</string>
    <string name="egyptian_league">Egyptian League</string>
    <string name="team_logo">Team Logo</string>
    <string name="title_activity_leagues">LeaguesActivity</string>
    <string name="team_label">Team</string>
    <string name="mp">MP</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">GD</string>
    <string name="pts">PTS</string>
    <string name="player_image">Player Image</string>
    <string name="favorite">Favourite</string>
    <string name="placeholder">placeholder</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_widget">Footy</string>
    <string name="add_widget">Add widget</string>

    <string name="player">Player</string>
    <string name="path">https://apiv2.apifootball.com//badges/</string>
    <string name="add_to_fav_label">Add To Favourite</string>
    <string name="enter_ur_name_label">Enter Your Name</string>
    <string name="save_label">Save</string>
    <string name="team_adde_to_fav">Team Added To Favourite</string>
    <string name="cancel">Cancel</string>
    <string name="finished">Finished</string>
    <string name="live">Live</string>
</resources>
